Fix alignment of grid in my vault page

--- a/src/pages/my-vault/my-vault.scss
+++ b/src/pages/my-vault/my-vault.scss
@@ -5,7 +5,7 @@ page-my-vault {
         border-radius: 6px;
 
         img.poster {
-            width: 170px;
+            width: 100%;
             height: 260px;
             object-fit: cover;
         }
